--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,30 +2,28 @@
   type: map
   contents:
     - name: Full Name
-      value: Yu Lun, Hsu | 許育綸
-    - name: Email
-      value: b06401078@ntu.edu.tw
+      value: Albert Einstein
     - name: Date of Birth
-      value: 12th Sep 1998
+      value: 14th March 1879
     - name: Languages
-      value: Mandarin, English
+      value: English, German
 
 - title: Education
   type: time_table
   contents:
-    - title: Master of Computer Science and Information Engineering
-      institution: National Taiwan University (NTU), Taipei, Taiwan
-      year: 2023.09 - 2025.06
+    - title: PhD
+      institution: University of Zurich, Zurich, Switzerland
+      year: 1905
       description:
-        - GPA 4.30/4.30
-        - Published 4 papers
+        - Description 1.
+        - Description 2.
         - title: Description 3.
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Bachelor of Medicine
-      institution: National Taiwan University (NTU), Taipei, Taiwan
-      year: 2017.09 - 2023.06
+    - title: Federal teaching diploma
+      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
+      year: 1900
       description:
         - Description 1.
         - Description 2.
